# StockHelper4me

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  av3_after_fix.txt  av3_after_p1_17.txt  av3_clean.txt  av3_final.txt  av3_result.txt  av3_with_splits.txt  discover.txt  docker-compose.yml  fix_p1_17_log.txt  p1_17_result.txt  pyproject.toml  requirements.txt  test.txt
rust_compute/: Cargo.toml  schema_dump.txt
rust_compute/cores/chip/block_trade_core/: Cargo.toml
rust_compute/cores/chip/block_trade_core/src/: lib.rs
rust_compute/cores/chip/day_trading_core/: Cargo.toml
rust_compute/cores/chip/day_trading_core/src/: lib.rs
rust_compute/cores/chip/foreign_holding_core/: Cargo.toml
rust_compute/cores/chip/foreign_holding_core/src/: lib.rs
rust_compute/cores/chip/institutional_core/: Cargo.toml
rust_compute/cores/chip/institutional_core/src/: lib.rs
rust_compute/cores/chip/loan_collateral_core/: Cargo.toml
rust_compute/cores/chip/loan_collateral_core/src/: lib.rs
rust_compute/cores/chip/margin_core/: Cargo.toml
rust_compute/cores/chip/margin_core/src/: lib.rs
rust_compute/cores/chip/risk_alert_core/: Cargo.toml
rust_compute/cores/chip/risk_alert_core/src/: lib.rs
rust_compute/cores/chip/shareholder_core/: Cargo.toml
rust_compute/cores/chip/shareholder_core/src/: lib.rs
rust_compute/cores/environment/business_indicator_core/: Cargo.toml
rust_compute/cores/environment/business_indicator_core/src/: lib.rs
rust_compute/cores/environment/commodity_macro_core/: Cargo.toml
rust_compute/cores/environment/commodity_macro_core/src/: lib.rs
rust_compute/cores/environment/exchange_rate_core/: Cargo.toml
rust_compute/cores/environment/exchange_rate_core/src/: lib.rs
rust_compute/cores/environment/fear_greed_core/: Cargo.toml
rust_compute/cores/environment/fear_greed_core/src/: lib.rs
rust_compute/cores/environment/market_margin_core/: Cargo.toml
rust_compute/cores/environment/market_margin_core/src/: lib.rs
rust_compute/cores/environment/taiex_core/: Cargo.toml
rust_compute/cores/environment/taiex_core/src/: lib.rs
rust_compute/cores/environment/us_market_core/: Cargo.toml
rust_compute/cores/environment/us_market_core/src/: lib.rs
rust_compute/cores/fundamental/financial_statement_core/: Cargo.toml
rust_compute/cores/fundamental/financial_statement_core/src/: lib.rs
rust_compute/cores/fundamental/magic_formula_core/: Cargo.toml
rust_compute/cores/fundamental/magic_formula_core/src/: lib.rs
rust_compute/cores/fundamental/revenue_core/: Cargo.toml
rust_compute/cores/fundamental/revenue_core/src/: lib.rs
rust_compute/cores/fundamental/valuation_core/: Cargo.toml
rust_compute/cores/fundamental/valuation_core/src/: lib.rs
rust_compute/cores/indicator/adx_core/: Cargo.toml
rust_compute/cores/indicator/adx_core/src/: lib.rs
rust_compute/cores/indicator/atr_core/: Cargo.toml
rust_compute/cores/indicator/atr_core/src/: lib.rs
rust_compute/cores/indicator/bollinger_core/: Cargo.toml
rust_compute/cores/indicator/bollinger_core/src/: lib.rs
rust_compute/cores/indicator/candlestick_pattern_core/: Cargo.toml
rust_compute/cores/indicator/candlestick_pattern_core/src/: lib.rs
rust_compute/cores/indicator/cci_core/: Cargo.toml
rust_compute/cores/indicator/cci_core/src/: lib.rs
rust_compute/cores/indicator/coppock_core/: Cargo.toml
rust_compute/cores/indicator/coppock_core/src/: lib.rs
rust_compute/cores/indicator/donchian_core/: Cargo.toml
rust_compute/cores/indicator/donchian_core/src/: lib.rs
rust_compute/cores/indicator/ichimoku_core/: Cargo.toml
rust_compute/cores/indicator/ichimoku_core/src/: lib.rs
rust_compute/cores/indicator/kalman_filter_core/: Cargo.toml
rust_compute/cores/indicator/kalman_filter_core/src/: lib.rs
rust_compute/cores/indicator/kalman_forecast_core/: Cargo.toml
rust_compute/cores/indicator/kalman_forecast_core/src/: lib.rs
rust_compute/cores/indicator/kd_core/: Cargo.toml
rust_compute/cores/indicator/kd_core/src/: lib.rs
rust_compute/cores/indicator/keltner_core/: Cargo.toml
rust_compute/cores/indicator/keltner_core/src/: lib.rs
rust_compute/cores/indicator/ma_core/: Cargo.toml
rust_compute/cores/indicator/ma_core/src/: lib.rs
rust_compute/cores/indicator/macd_core/: Cargo.toml
rust_compute/cores/indicator/macd_core/src/: lib.rs
rust_compute/cores/indicator/mfi_core/: Cargo.toml
rust_compute/cores/indicator/mfi_core/src/: lib.rs
rust_compute/cores/indicator/obv_core/: Cargo.toml
rust_compute/cores/indicator/obv_core/src/: lib.rs
rust_compute/cores/indicator/rsi_core/: Cargo.toml
rust_compute/cores/indicator/rsi_core/src/: lib.rs
rust_compute/cores/indicator/support_resistance_core/: Cargo.toml
rust_compute/cores/indicator/support_resistance_core/src/: lib.rs
rust_compute/cores/indicator/trendline_core/: Cargo.toml
rust_compute/cores/indicator/trendline_core/src/: lib.rs
rust_compute/cores/indicator/vwap_core/: Cargo.toml
rust_compute/cores/indicator/williams_r_core/: Cargo.toml
rust_compute/cores/system/tw_cores/: Cargo.toml
rust_compute/cores/system/tw_cores/src/: cli.rs  (+8 more)
rust_compute/cores/wave/neely_core/: Cargo.toml
rust_compute/cores_shared/chip_loader/: Cargo.toml
rust_compute/cores_shared/chip_loader/src/: lib.rs
rust_compute/cores_shared/core_registry/: Cargo.toml
rust_compute/cores_shared/core_registry/src/: lib.rs
rust_compute/cores_shared/environment_loader/: Cargo.toml
rust_compute/cores_shared/environment_loader/src/: lib.rs
rust_compute/cores_shared/fact_schema/: Cargo.toml
rust_compute/cores_shared/fact_schema/src/: lib.rs
rust_compute/cores_shared/fundamental_loader/: Cargo.toml
rust_compute/cores_shared/fundamental_loader/src/: lib.rs
rust_compute/cores_shared/indicator_kernel/: Cargo.toml
rust_compute/cores_shared/indicator_kernel/src/: lib.rs
rust_compute/cores_shared/ohlcv_loader/: Cargo.toml
rust_compute/cores_shared/ohlcv_loader/src/: lib.rs
rust_compute/silver_s1_adjustment/: Cargo.toml
rust_compute/silver_s1_adjustment/src/: main.rs
rust_compute/src/: main.rs
(+521 files in other folders)
