[workspace]
resolver = "2"
members = [
    "silver_s1_adjustment",
    "cores_shared/fact_schema",
    "cores/wave/neely_core",
    "cores/system/tw_cores",
]

# 共用相依版本鎖在 workspace,各 member 透過 `dep.workspace = true` 引用
[workspace.dependencies]
# ─── DB driver ───
# runtime-tokio / tls-native-tls / postgres / chrono / macros
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "macros",
] }

# ─── Async runtime ───
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# JSON 序列化
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# 時間處理
chrono = { version = "0.4", features = ["serde"] }

# CLI 參數解析
clap = { version = "4", features = ["derive", "env"] }

# 錯誤處理
anyhow = "1"

# Hash(供 cores fact_schema params_hash 用 — cores_overview §7.4)
blake3 = "1"

# Tracing(P0 後 cores 階段日誌用,先鎖版避免後續 PR 再加)
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
