[package]
name        = "environment_loader"
version     = "0.1.0"
edition     = "2021"
description = "Cores 共用 Environment loader,對齊 oldm2Spec/environment_cores.md §2"

[dependencies]
fact_schema = { path = "../fact_schema" }
sqlx       = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
