[package]
name        = "fact_schema"
version     = "0.1.0"
edition     = "2021"
description = "Cores 共用 Fact / Trait / Timeframe 定義(對齊 m3Spec/cores_overview.md §3 §6.2)"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
blake3     = { workspace = true }
