[package]
name        = "risk_alert_core"
version     = "0.1.0"
edition     = "2021"
description = "Risk Alert Core(P2,處置股風險警示;對齊 m3Spec/chip_cores.md §十二)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema    = { path = "../../../cores_shared/fact_schema" }
chip_loader    = { path = "../../../cores_shared/chip_loader" }
core_registry  = { path = "../../../cores_shared/core_registry" }
anyhow         = { workspace = true }
chrono         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
inventory      = "0.3"
