[package]
name        = "exchange_rate_core"
version     = "0.1.0"
edition     = "2021"
description = "Exchange Rate Core(P2,匯率,stock_id 保留字 _global_)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema       = { path = "../../../cores_shared/fact_schema" }
environment_loader = { path = "../../../cores_shared/environment_loader" }
core_registry     = { path = "../../../cores_shared/core_registry" }
anyhow            = { workspace = true }
chrono            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
inventory         = "0.3"
