[package]
name        = "fear_greed_core"
version     = "0.1.0"
edition     = "2021"
description = "Fear Greed Core(P2,恐慌貪婪指數,stock_id _global_)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema       = { path = "../../../cores_shared/fact_schema" }
environment_loader = { path = "../../../cores_shared/environment_loader" }
core_registry     = { path = "../../../cores_shared/core_registry" }
anyhow            = { workspace = true }
chrono            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
inventory         = "0.3"
