[package]
name        = "magic_formula_core"
version     = "0.1.0"
edition     = "2021"
description = "Magic Formula Core(P2,Greenblatt 2005 cross-rank Top30 transition,對齊 m3Spec/magic_formula_core.md)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema        = { path = "../../../cores_shared/fact_schema" }
fundamental_loader = { path = "../../../cores_shared/fundamental_loader" }
core_registry      = { path = "../../../cores_shared/core_registry" }
anyhow             = { workspace = true }
chrono             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
inventory          = "0.3"
