[package]
name = "bollinger_core"
version = "0.1.0"
edition = "2021"
description = "Bollinger Core(P1,布林通道 + bandwidth/breakout 事件)"
[lib]
path = "src/lib.rs"
[dependencies]
fact_schema      = { path = "../../../cores_shared/fact_schema" }
ohlcv_loader     = { path = "../../../cores_shared/ohlcv_loader" }
core_registry    = { path = "../../../cores_shared/core_registry" }
indicator_kernel = { path = "../../../cores_shared/indicator_kernel" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inventory = "0.3"
