[package]
name        = "donchian_core"
version     = "0.1.0"
edition     = "2021"
description = "Donchian Channel Core(P3,N 日高低點通道,對齊 m3Spec/indicator_cores_volatility.md §6)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema   = { path = "../../../cores_shared/fact_schema" }
ohlcv_loader  = { path = "../../../cores_shared/ohlcv_loader" }
core_registry = { path = "../../../cores_shared/core_registry" }
anyhow        = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
inventory     = "0.3"
