[package]
name        = "kalman_filter_core"
version     = "0.1.0"
edition     = "2021"
description = "Kalman Filter Core(P3,1-D trend smoothing + 5-class regime,對齊 m3Spec/kalman_filter_core.md)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema   = { path = "../../../cores_shared/fact_schema" }
ohlcv_loader  = { path = "../../../cores_shared/ohlcv_loader" }
core_registry = { path = "../../../cores_shared/core_registry" }
anyhow        = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
inventory     = "0.3"
