[package]
name        = "kalman_forecast_core"
version     = "0.1.0"
edition     = "2021"
description = "Kalman LLT 區間預測 core(filtered state + analytical h-step projection,v0.3 spec phase 3)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema   = { path = "../../../cores_shared/fact_schema" }
ohlcv_loader  = { path = "../../../cores_shared/ohlcv_loader" }
core_registry = { path = "../../../cores_shared/core_registry" }
anyhow        = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
inventory     = "0.3"
blake3        = { workspace = true }
