[package]
name        = "ma_core"
version     = "0.1.0"
edition     = "2021"
description = "MA Core(P1,SMA/EMA/WMA 同族,以 enum 區分子型號,對齊 oldm2Spec/indicator_cores_momentum.md §7)"

[lib]
path = "src/lib.rs"

[dependencies]
fact_schema   = { path = "../../../cores_shared/fact_schema" }
ohlcv_loader  = { path = "../../../cores_shared/ohlcv_loader" }
core_registry = { path = "../../../cores_shared/core_registry" }
anyhow        = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
inventory     = "0.3"
